cabal-version:   3.0
name:            geolite-csv-colonnade
version:         0.2.0.1
synopsis:        Geolite CSV Parser
description:     Please see README.md
homepage:        https://github.com/byteverse/geolite-csv-colonnade
bug-reports:     https://github.com/byteverse/geolite-csv-colonnade/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Andrew Martin
maintainer:      amartin@layer3com.com
copyright:       2016 Andrew Martin
category:        web
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.4.8 || ==9.6.3 || ==9.8.1

common build-settings
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages
  build-depends:    base >=4.7 && <5

library
  import:          build-settings
  ghc-options:     -O2
  hs-source-dirs:  src
  exposed-modules:
    Geolite.Csv
    Geolite.Types

  build-depends:
    , colonnade  >=1.2
    , ip         >=0.8.4
    , pipes
    , siphon
    , text

test-suite geolite-csv-test
  import:         build-settings
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , colonnade
    , directory
    , geolite-csv
    , HUnit
    , pipes
    , pipes-bytestring
    , pipes-text
    , siphon
    , test-framework
    , test-framework-hunit
    , text

source-repository head
  type:     git
  location: git://github.com/byteverse/geolite-csv-colonnade.git
